# rocket-science

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  documentation.md  fpm.toml  uml-sequence-diagram.puml
app/: explicit-euler.f90  gnuplot.inp  main.f90  runge-kutta-2nd-order.f90  runge-kutta-fehlberg.f90
doc/: api.puml  documentation.md  refurbished-rocket-class.puml  text-art.txt  uml-class-diagram.puml  uml-object-diagram.puml  uml-sequence-diagram.puml
src/: CMakeLists.txt  flags_module.f90  main.f90  object-oriented-design.f90  volfil.f90
src/day-1/: 00-hello-world.f  01-calcthrust.f90  02-main.f90  03-oops.f90  04-thrust_module.f90  06-mod1.f90  07-rocket.f90  08-integration-test.f90  12-assertion_implementation.f90  README.md
src/day-3/: 01-use-object.f90  04-hole-test.f90  05-hole_interface.f90  08-hole-test-defined.f90  abstract_object_interface.f90  run_test.sh
src/jams/day-1/: 05-caught-ya.f90  08-integration-test.f90  09-refurbished-rocket.f90  10-assertion_utility.f90  11-assertion_interface.f90
src/jams/day-3/: 00-information-hiding.f90  02-object_interface.f90  03-object_implementation.f90  04-hole-test.f90  05-hole_interface.f90  06-hole_implementation.f90
src/legacy/: CMakeLists.txt  legacy_rocket.f90
src/modules/: .combustion_module.f90.swp  CMakeLists.txt  chamber_interface.f90  chamber_module.f90  combustion_module.f90  flags_module.f90  flow_rate_module.f90  gas_module.f90  gasprop_module.f90  generant_module.f90  generation_rate_module.f90  grain_implementation.f90  hole_module.f90  inflator_module.f90  math_constants.f90  nozzle_implementation.f90  numerics_interface.f90  numerics_module.f90  persistent_state_module.f90  pyro_module.f90  results_implementation.f90  volfil.f90
src/original/: volfil.f90
src/original/flags/: CMakeLists.txt
src/post-course/: hole-check-definition.puml
src/reference/: CMakeLists.txt
src/refurbished/: CMakeLists.txt  burn_state_implementation.f90  burn_state_interface.f90  burn_state_t_implementation.f90  burn_state_t_interface.f90  chamber_gas_implementation.f90  chamber_gas_interface.f90  chamber_gas_t_implementation.f90  chamber_gas_t_interface.f90  constants.f90  flow_rate_implementation.f90  flow_rate_interface.f90  flow_rate_t_implementation.f90  flow_rate_t_interface.f90  generation_rate_implementation.f90  generation_rate_interface.f90  generation_rate_t_implementation.f90  generation_rate_t_interface.f90  geometry_implementation.f90  geometry_interface.f90  geometry_t_implementation.f90  geometry_t_interface.f90  nozzle_t_implementation.f90  nozzle_t_interface.f90  refurbished_rocket.F90  refurbished_rocket.f90
src/rocket/: CMakeLists.txt  chamber_implementation.f90  chamber_interface.f90  generation_rate_implementation.f90  main.f90  motor_implementation.f90  nozzle_implementation.f90  nozzle_interface.f90  numerics_implementation.f90  results_implementation.f90  results_interface.f90  state_implementation.f90  state_interface.f90  state_rate_implementation.f90
src/rocket/modules/: CMakeLists.txt  CMakelists.txt  chamber_implementation.f90  chamber_interface.f90  chamber_module.f90  combustion_implementation.f90  combustion_interface.f90  combustion_module.f90  flow_rate_implementation.f90  flow_rate_interface.f90  flow_rate_module.f90  gas_implementation.f90  gas_interface.f90  gas_module.f90  generation_rate_interface.f90  generation_rate_module.f90  grain_interface.f90  grain_module.f90  hole_module.f90  inflator_module.f90  mod1.f90  motor_implementation.f90  motor_interface.f90  motor_module.f90  nozzle_module.f90  numerics_interface.f90  numerics_module.f90  persistent_state_module.f90  results_implementation.f90  results_interface.f90  rocket.f90  state_implementation.f90  state_interface.f90  state_module.f90  state_rate_interface.f90  state_rate_module.f90
src/rocket/original/: CMakeLists.txt  mod1.f90  rocket.f90
src/rocket/reference/: CMakeLists.txt  legacy_rocket.f90  reference_rocket.f90  rocket.f90
src/rocket/refurbished/: CMakeLists.txt  module_variables.f90  refurbished-rocket.f90
src/utilities/: CMakeLists.txt  README.md  array_functions_interface.f90  assertions_implementation.F90  assertions_interface.F90  assertions_module.F90  command_line_interface.f90  command_line_module.f90  kind_parameters.f90  object_interface.f90  oracle_interface.f90  universal_constants.f90
src/volfil/: CMakeLists.txt  main.f90
src/volfil/modules/: chamber_module.f90  combustion_module.f90  flow_rate_module.f90  gas_module.f90  generation_rate_module.f90  hole_module.f90  inflator_module.f90  numerics_module.f90  persistent_state_module.f90
src/volfil/original/: flags_module.f90  gasprop_module.f90  generant_module.f90  mainold.f90  volfil.f90
test/: README.md  main.f90  rocket_test.f90
test/integration/rocket/: rocket.inp
test/unit/nozzle-class/: test-nozzle-class.f90
test/unit/results-class/: rocket.inp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  documentation.md
tests/integration/blow_down/: volfil.inp
tests/integration/design/: CMakeLists.txt  test-design.f90
tests/integration/original/: rocket.f90
tests/integration/rocket/: CMakeLists.txt  gnuplot.inp  rocket.inp
tests/integration/toy/: CMakeLists.txt  volfil.inp
tests/integration/volfil/: CMakeLists.txt
tests/unit/: CMakeLists.txt  README.md
tests/unit/chamber/: test-chamber.f90
tests/unit/combustion/: test-combustion.f90  volfil.inp
tests/unit/flags/: test-flags.f90  volfil.inp
tests/unit/gas/: test-gas.f90  volfil.inp
tests/unit/hole/: test-hole.f90  volfil.inp
tests/unit/inflator/: CMakeLists.txt  test-inflator.f90  volfil.inp
tests/unit/nozzle-class/: CMakeLists.txt  test-nozzle-class.f90
tests/unit/numerics/: test-numerics.f90  volfil.inp
tests/unit/pyro/: CMakeLists.txt  test-pyro.f90  volfil.inp
tests/unit/reference-data-output/: CMakeLists.txt  rocket.inp  test-reference-data-output.f90
tests/unit/results-class/: CMakeLists.txt  test-results-class.f90
tests/unit/thrust/: CMakeLists.txt  test-thrust.f90
(+12 files in other folders)
